Drag and dropping materials does not update viewport in rendered mode #42075

Closed
opened 2014-10-04 21:00:41 +02:00 by Thibaut Bequet · 6 comments

System Information
Windows 8.1 pro 64bit, GT650M(2go)

Blender Version
Broken: 2.72 (95182d1)
Worked: na

Short description of error
This is a low priority problem but seems pretty easy to fix.
Dragging and dropping materials from one object to another does not update the 3D view when in rendered mode (cycles & internal).

Exact steps for others to reproduce the error

  • Create two objects with 2 different materials and set the 3D view to rendered mode
  • select object 1, go to materials tab, click and drag its material onto object 2
  • 3D view is not updated in cycles or internal render mode
**System Information** Windows 8.1 pro 64bit, GT650M(2go) **Blender Version** Broken: 2.72 (95182d1) Worked: na **Short description of error** This is a low priority problem but seems pretty easy to fix. Dragging and dropping materials from one object to another does not update the 3D view when in rendered mode (cycles & internal). **Exact steps for others to reproduce the error** - Create two objects with 2 different materials and set the 3D view to rendered mode - select object 1, go to materials tab, click and drag its material onto object 2 - 3D view is not updated in cycles or internal render mode
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @ThibautBequet

Added subscriber: @ThibautBequet

This issue was referenced by 81c4c29504

This issue was referenced by 81c4c295041b72986efe4427fa3587a1d62c3ee6

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 81c4c29504.

Closed by commit 81c4c29504.

This issue was referenced by fc9051da0d

This issue was referenced by fc9051da0d1e14c95654a979925838c7ff9ef1bd
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42075
No description provided.