Fix T42075: DnD Material not updating render view